--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,17 +2,15 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Faeze Ghorbanpour
     - name: Languages
-      value: English, German
+      value: English, Farsi, Azerbaijani
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
+      institution: Technical University of Munich
       year: 1905
       description:
         - Description 1.
@@ -21,6 +19,12 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
+    - title: Federal teaching diploma
+      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
+      year: 1900
+      description:
+        - Description 1.
+        - Description 2.
     - title: Federal teaching diploma
       institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
       year: 1900
