--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -23,7 +23,7 @@ email: faeze.ghorbanpour@tum.de # your email address
 linkedin_username: faeze-ghorbanpour/ # your LinkedIn user name
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
-# orcid_id: # your ORCID ID
+orcid_id: 0009-0006-0570-4439 # your ORCID ID
 # osf_id: # your OSF ID
 # pinterest_id: # your pinterest id
 # publons_id: # your ID on Publons
