--- a/_config.yml
+++ b/_config.yml
@@ -174,6 +174,11 @@ kramdown:
 include: ["_pages", "_scripts"]
 exclude:
   - bin/
+  - _pages/blog.md
+  - _posts/
+  - _projects/
+  - _repositories/
+  - _people/
   - CONTRIBUTING.md
   - CUSTOMIZE.md
   - Dockerfile
