--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,6 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - FaezeGhorbanpour
 
 repo_description_lines_max: 2
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
