--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,6 +1,14 @@
 github_users:
   - FaezeGhorbanpour
+  - alshedivat
 
 repo_description_lines_max: 2
 
 github_repos:
+  - alshedivat/al-folio
+  - jekyll/jekyll
+  - twbs/bootstrap
+  - jquery/jquery
+  - FortAwesome/Font-Awesome
+  - mathjax/MathJax
+  - jpswalsh/academicons
