--- a/_config.yml
+++ b/_config.yml
@@ -124,11 +124,8 @@ disqus_shortname: Faeze # put your disqus shortname
 # you can display them in your blog by adding a link to the RSS feed.
 external_sources:
   - name: medium.com
-    rss_url: https://medium.com/@al-folio/feed
-  - name: Google Blog
-    posts:
-      - url: https://blog.google/technology/ai/google-gemini-update-flash-ai-assistant-io-2024/
-        published_date: 2024-05-14
+    rss_url: https://medium.com/
+  - name:
 
 # -----------------------------------------------------------------------------
 # Newsletter
