extra things removed

--- a/_config.yml
+++ b/_config.yml
@@ -338,7 +338,7 @@ enable_publication_thumbnails: true
 
 # These are the defaults
 external_links:
-  enabled: true
+  enabled: false
   rel: external nofollow noopener
   target: _blank
   exclude:
@@ -627,8 +627,8 @@ jekyll_get_json:
 
 jsonresume:
   - basics
-  - work
   - education
+  - work
   - publications
   - projects
   - volunteer
