--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ last_name: Ghorbanpour
 contact_note: >
   
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
+ Faeze's Personal Page
 footer_text: >
 keywords:  # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
