--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,9 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Faeze
 middle_name: 
 last_name: Ghorbanpour
-contact_note: >
-  
-description: > # the ">" symbol means to ignore newlines until "footer_text:"
- Faeze's Personal Page
-footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
+contact_note:
+description:
+footer_text:
 keywords:  # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon:  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
