--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -72,7 +72,7 @@
       year: 2015-now
       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
-- title: Honors and Awards
+- title: Honors
   type: time_table
   contents:
     - year: 1921
